2012-08-03  Philippe Normand  <pnormand@igalia.com>

        Unreviewed, rolling out r124614.
        http://trac.webkit.org/changeset/124614
        https://bugs.webkit.org/show_bug.cgi?id=91727

        gstreamer core .po files mess up the build again

        * Scripts/webkitdirs.pm:
        (buildAutotoolsProject):
        * gtk/jhbuild.modules:

2012-08-03  Philippe Normand  <pnormand@igalia.com>

        [GTK][jhbuild] Switch to GStreamer 0.11 build
        https://bugs.webkit.org/show_bug.cgi?id=91727

        Reviewed by Gustavo Noronha Silva.

        Switch build-webkit --gtk to GStreamer 0.11 support and build the
        necessary GStreamer git modules from JHBuild.

        * Scripts/webkitdirs.pm:
        (buildAutotoolsProject): Build WebKit with GStreamer 0.11 support.
        * gtk/jhbuild.modules: GStreamer build support.

2012-08-03  Nico Weber  <thakis@chromium.org>

        [chromium mac] DumpRenderTree compile fails with warning/error in LayoutTestHelper.mm with 10.7sdk
        https://bugs.webkit.org/show_bug.cgi?id=92820

        Reviewed by Jochen Eisinger.

        When building with the 10.7 SDK, use newer functions to switch color
        profiles. Note that these newer functions aren't available on 10.6,
        but we don't intend to ship DRT to users, and no bots that currently
        build with the 10.7 SDK ship their binaries to 10.6 testers.

        The new code was copied from Apple's DRT/mac/LayoutTestHelper.m.

        * DumpRenderTree/chromium/LayoutTestHelper.mm:
        (installLayoutTestColorProfile):
        (restoreUserColorProfile):
        (saveCurrentColorProfile):

2012-08-03  Benjamin Poulain  <benjamin@webkit.org>

        StringImpl created from literal should be BufferInternal
        https://bugs.webkit.org/show_bug.cgi?id=92940

        Reviewed by Anders Carlsson.

        Add tests for the contruction of strings from literal.

        * TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj: